--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -2,8 +2,8 @@ login: &login
   adapter: postgresql
   encoding: utf8
   host: localhost
-  username: stels
-  password: 123456
+  username:
+  password:
 
 development:
   <<: *login
