--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "socket_chat",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.4"
+    "@rails/webpacker": "3.4",
+    "bootstrap": "3.3.7",
+    "jquery": "^3.3.1",
+    "jquery-ujs": "^1.2.2",
+    "popper.js": "^1.14.3",
+    "rails-ujs": "^5.2.0",
+    "resolve-url-loader": "^2.3.0",
+    "turbolinks": "^5.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
