--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "actioncable": "^5.2.0",
     "bootstrap": "3.3.7",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
