--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/webpacker": "3.4",
     "actioncable": "^5.2.0",
     "bootstrap": "3.3.7",
+    "dotenv": "^5.0.1",
+    "dotenv-webpack": "^1.5.5",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "popper.js": "^1.14.3",
