--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "3.3.7",
     "dotenv": "^5.0.1",
     "dotenv-webpack": "^1.5.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "popper.js": "^1.14.3",
