--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 
 /node_modules
 /yarn-error.log
-
 .byebug_history
 
 .idea/
@@ -28,4 +27,5 @@ yarn-debug.log*
 .yarn-integrity
 public/uploads
 .env
-
+localhost.crt
+localhost.key
