--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.4",
     "actioncable": "^5.2.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "3.3.7",
     "dotenv": "^5.0.1",
     "dotenv-webpack": "^1.5.5",
@@ -11,7 +12,11 @@
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "popper.js": "^1.14.3",
+    "prop-types": "^15.6.1",
     "rails-ujs": "^5.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react_ujs": "^2.4.4",
     "resolve-url-loader": "^2.3.0",
     "turbolinks": "^5.1.1"
   },
